<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">

    <LinearLayout
        android:id="@+id/containerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewResetPage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sfuidisplay_medium"
            android:gravity="center"
            android:padding="16dp"
            android:textAlignment="center"
            android:text="@string/reset_password"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewReset"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sfuidisplay_light"
            android:text="@string/enter_username" />

        <EditText
            android:id="@+id/editTextReset"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:fontFamily="@font/sfuidisplay_light"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewPass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/re_enter_password"
            android:fontFamily="@font/sfuidisplay_light"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:fontFamily="@font/sfuidisplay_light"
            android:minHeight="48dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/sfuidisplay_semibold"
            android:minHeight="48dp"
            android:text="@string/next" />

    </LinearLayout>

</ScrollView>